#1309 Fix alignment and home section.
git-svn-id: svn://svn.opentaps.org/opentaps_all/versions/1.4/trunk@14384 d3523486-f5fe-0310-a41a-a15a4e76f3c7

--- a/hot-deploy/crmsfa/webapp/crm_images/crmsfa.css
+++ b/hot-deploy/crmsfa/webapp/crm_images/crmsfa.css
@@ -426,58 +426,58 @@ div.paymentSettingHeader {
 
 
 div#sectionHeaderTitle_leads {
-    background: transparent url('/opentaps_images/openclipart.org/headset_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/headset_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_accounts {
-    background: transparent url('/opentaps_images/openclipart.org/handshake_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/handshake_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_activities {
-    background: transparent url('/opentaps_images/openclipart.org/folder_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/folder_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_cases {
-    background:transparent  url('/opentaps_images/openclipart.org/clipboard_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background:transparent  url('/opentaps_images/openclipart.org/clipboard_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_contacts {
-    background: transparent url('/opentaps_images/openclipart.org/ppl3_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/ppl3_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_forecasts {
-    background: transparent url('/opentaps_images/openclipart.org/histogram_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/histogram_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_marketing {
-    background: transparent url('/opentaps_images/openclipart.org/lampada_di_aladino_alad_01_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/lampada_di_aladino_alad_01_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_myHome {
-    background: url('/opentaps_images/openclipart.org/folders_24x24.png') no-repeat 0 5px;;
-    padding-lefttransparent : 40px;
+    background: url('/opentaps_images/openclipart.org/folders_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_opportunities {
-    background:transparent  url('/opentaps_images/openclipart.org/ringing_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background:transparent  url('/opentaps_images/openclipart.org/ringing_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_partners {
-    background: transparent url('/opentaps_images/openclipart.org/earth_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/earth_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_quotes {
-    background: transparent url('/opentaps_images/openclipart.org/clipboard_and_pen_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/clipboard_and_pen_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_teams {
-    background: transparent url('/opentaps_images/openclipart.org/ppls_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/ppls_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_orders {
-    background: transparent url('/opentaps_images/openclipart.org/calcolatrice_architetto__01_24x24.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/calcolatrice_architetto__01_24x24.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
 div#sectionHeaderTitle_reports {
-    background: transparent url('/opentaps_images/openclipart.org/inservice_presentation_01.png') no-repeat 0 5px;;
-    padding: 7px 0 0 35px;
+    background: transparent url('/opentaps_images/openclipart.org/inservice_presentation_01.png') no-repeat 0 5px;
+    padding:7px 0px 0px 35px;
 }
